<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.example.eartrainingappfirstlevel.MainActivity">

    <TextView
        android:id="@+id/pressBtnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_play_button"
        android:textSize="20sp"
        android:textColor="@color/dark_red"/>
        <ImageButton
            android:id="@+id/PlayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pressBtnText"
            android:layout_centerHorizontal="true"
            android:background="@drawable/play_button_icon"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupIntervals1"
        android:layout_below="@id/PlayButton"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_minor_second"
            android:text="@string/radio_button_minor_second"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_major_second"
            android:text="@string/radio_button_major_second"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_minor_third"
            android:text="@string/radio_button_minor_third"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_major_third"
            android:text="@string/radio_button_major_third"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_perfect_fourth"
            android:text="@string/radio_button_perfect_fourth"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_augmented_fourth"
            android:text="@string/radio_button_augmented_fourth"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
    </RadioGroup>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupIntervals2"
        android:layout_below="@id/PlayButton"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_perfect_fifth"
            android:text="@string/radio_button_perfect_fifth"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_minor_sixth"
            android:text="@string/radio_button_minor_sixth"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_major_sixth"
            android:text="@string/radio_button_major_sixth"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_minor_seventh"
            android:text="@string/radio_button_minor_seventh"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_major_seventh"
            android:text="@string/radio_button_major_seventh"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_perfect_octave"
            android:text="@string/radio_button_perfect_octave"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
    </RadioGroup>
    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:textColor="#e6721a"
        android:textSize="30sp"
        android:layout_below="@id/radioGroupIntervals2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/submit_button_shape"
        android:paddingLeft="50sp"
        android:paddingRight="50sp"/>
    <ProgressBar
        android:id="@+id/scoreBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submitButton"
        android:paddingTop="20sp"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:max="100"
        android:indeterminate="false"/>
    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scoreBar"
        android:layout_below="@+id/scoreBar"/>

</RelativeLayout>